examples/passing/RedefinedFixity/M1.purs
module M1 where

import Prelude ()

($) f a = f a

infixr 1000 $
