examples/failing/OverlappingArguments.purs
module OverlappingArguments where

import Prelude

f x x = x
